fix table alignment with columns

--- a/scss/modules/_tables.scss
+++ b/scss/modules/_tables.scss
@@ -4,12 +4,25 @@
 table {
     border-collapse: collapse;
     border-spacing: 0;
+    display: table;
+}
+
+tr {
+    display: table-row;
 }
 
 th,
 td {
     padding: .85rem;
     text-align: left;
+    display: table-cell;
+}
+
+th[class*=col-],
+td[class*=col-] {
+    padding: .85rem;
+    position: static;
+    float: none;
 }
 
 td {
